Update autosuggest demo with real company names

--- a/index.html
+++ b/index.html
@@ -104,9 +104,13 @@
                 highlightLoop: true
             });
 
-            searchDemo.addDemo('plumber near', 'plumber near me');
-            searchDemo.addDemo('emergency plumb', 'emergency plumber 24/7');
-            searchDemo.addDemo('best plumbing serv', 'best plumbing services');
+            // Add company-specific search demos
+            searchDemo.addDemo('roto rooter', 'roto rooter plumbing near me');
+            searchDemo.addDemo('mr rooter', 'mr rooter 24 hour emergency service');
+            searchDemo.addDemo('benjamin frankl', 'benjamin franklin plumbing reviews');
+            searchDemo.addDemo('home depot plum', 'home depot plumbing services');
+            searchDemo.addDemo('mikes plumbing', 'mikes plumbing and heating');
+            searchDemo.addDemo('angi plumb', 'angi plumbing contractors');
             searchDemo.start();
 
             // Initialize LSA demo
